src/objects/MCAR_Facility__c.object
<CustomObject>
    <fields>
        <fullName>MCAR_Facility_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Facility_Country__c</fullName>
        <label>Country</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consolidation Point (CP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Facitily_City__c</fullName>
        <label>City</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <label>Plant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Facility_Company__c</columns>
        <columns>MCAR_Facility_Type__c</columns>
        <columns>MCAR_Facitily_City__c</columns>
        <columns>MCAR_Facility_Country__c</columns>
        <columns>Plant_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMS_Facilities</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Facility_Company__c</columns>
        <columns>MCAR_Facility_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Facility_Type__c</field>
            <operation>equals</operation>
            <value>EMS</value>
        </filters>
        <label>EMS Facilities</label>
    </listViews>
    <nameField>
        <label>MCAR Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>